syntax="proto3";

package NAlice.NSocialSharing;
option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/api";
option java_package = "ru.yandex.alice.social.sharing.proto";
option java_outer_classname = "DirectivesProto";

import "alice/paskills/social_sharing/proto/api/web_page.proto";

message TCreateSocialLinkDirective {
    oneof Content {
        TScenarioSharePage ScenarioSharePage = 1 [json_name = "scenario_share_page"];
        string Url = 2 [json_name = "url"];
    }
}
