syntax="proto3";

package NAlice.NSocialSharing.Context;

option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/context";
option java_package = "ru.yandex.alice.social.sharing.proto.context";
option java_outer_classname = "FetchDocumentProto";

import "alice/paskills/social_sharing/proto/api/web_page.proto";

message TFetchDocumentRequest {
    string DocumentId = 1 [json_name = "document_id"];
}

message TDocument {
    string DocumentId = 1 [json_name = "document_id"];
    TScenarioSharePage ScenarioSharePage = 2 [json_name = "scenario_share_page"];
}
